@@ -240,17 +240,17 @@ Poweredge R710, Fujitsu iRMC S1 and iRMC S2 systems, Gigabyte
 MD90-FS0-ZB, Gigabyte MG20-OP0-ZB/Penguin Computing Relgion X1904GT,
 Intel S5500WB/Penguin Computing Relion 700, Intel S2600JF/Appro 512X,
 Intel S2600GZ, Intel S2600WP, Intel S5000PAL, Intel Windmill, Intel
-S2600KP, Intel S2600KPR, Intel S2600WT2, Intel S2600WTT, Inventec
-5441/Dell Xanadu II, Inventec 5442/Dell Xanadu III, Quanta S99Q/Dell
-FS12-TY, Quanta QSSC-S4R/Appro GB812X-CN, Quanta Winterfell, Sun X4140
-Supermicro X7DBR-3, Supermicro X7DB8, Supermicro X8DTN, Supermicro
-X7SBI-LN4, Supermicro X8DTH, Supermicro X8DTG, Supermicro X8DTU,
-Supermicro X8DT3-LN4F, Supermicro X8DTU-6+, Supermicro X8DTL,
-Supermicro X8DTL-3F, Supermicro X8SIL-F, Supermicro X9SCL, Supermicro
-X9SCM, Supermicro X8DTN+-F, Supermicro X8SIE, Supermicro X9SCA-F-O,
-Supermicro H8DGU-F, Supermicro X9DRi-F, Supermicro X9DRI-LN4F+,
-Supermicro X9SPU-F-O, Supermicro X9SCM-iiF, Supermicro X10SLM-F,
-Wiwynn Windmill, Wistron/Dell Poweredge C6220.
+S2600KP, Intel S2600KPR, Intel S2600WT2, Intel S2600WTT, Intel
+S2600BPB, Inventec 5441/Dell Xanadu II, Inventec 5442/Dell Xanadu III,
+Quanta S99Q/Dell FS12-TY, Quanta QSSC-S4R/Appro GB812X-CN, Quanta
+Winterfell, Sun X4140 Supermicro X7DBR-3, Supermicro X7DB8, Supermicro
+X8DTN, Supermicro X7SBI-LN4, Supermicro X8DTH, Supermicro X8DTG,
+Supermicro X8DTU, Supermicro X8DT3-LN4F, Supermicro X8DTU-6+,
+Supermicro X8DTL, Supermicro X8DTL-3F, Supermicro X8SIL-F, Supermicro
+X9SCL, Supermicro X9SCM, Supermicro X8DTN+-F, Supermicro X8SIE,
+Supermicro X9SCA-F-O, Supermicro H8DGU-F, Supermicro X9DRi-F,
+Supermicro X9DRI-LN4F+, Supermicro X9SPU-F-O, Supermicro X9SCM-iiF,
+Supermicro X10SLM-F, Wiwynn Windmill, Wistron/Dell Poweredge C6220.
 .SH "EXAMPLES"
 .B # ipmi-sel
 .PP
